--- a/blog/2022-11-19-auto-pay.md
+++ b/blog/2022-11-19-auto-pay.md
@@ -17,18 +17,33 @@ Read on for more information and screenshots!
 
 ## Organization Setup
 
-:::caution Stripe Setup Required
+Automatic payments first require online payments be configured and enabled, in addition to having Stripe connected. To allow customers to use Auto Draft, please go to each loan, actions and the **Online Payments** option. Once there, at the bottom there is an **Allow Auto Draft** option. Switch the option to *Yes* and then click save. The client then must enable auto draft themselves!
 
-Automatic payments require your organization to have Stripe connected to Lendiom. If you have not done so yet, we recommend doing it so you can accept payments online.
+The following is a screenshot of the configuration of the Online Payments with auto draft allowed:
 
-:::
-
-Automatic payments first require online payments be configured and enabled.
+![Lendiom Loan Online Payment Config Screenshot](/img/blog/2022-11-19-auto-pay/lendiom-online-payment-config.png)
 
 ## Client Setup
 
 :::caution Payment Method Required
 
-Before a client can use automatic payments, they must have a payment method and it must be enabled.
+Before a client can use automatic payments, they must have a payment method and it must be enabled. [Please see here for how to add a payment method](../docs/pay/guides/adding-payment-method).
 
 :::
+
+Enabling auto draft is easy inside of Lendiom Pay. To do it, go to the loan details page and click on the **More Actions** button and then click on **Enable Auto Draft**:
+
+![Loan Overview with Circles Screenshot](/img/blog/2022-11-19-auto-pay/pay-more-actions-auto-draft.png)
+
+After clicking on that, a modal will come up asking for details about the Auto Draft. The information required is:
+* Payment Method to use
+* Start Date
+* Payment Amount
+* How to Apply Extra
+* Total Amount
+
+Here is a screenshot showing this modal:
+
+![Auto Draft Modal Screenshot](/img/blog/2022-11-19-auto-pay/auto-pay-modal.png)
+
+Once you tap the blue **Schedule** button, auto draft will be enabled! It is that easy.
